# clingo-dungeons

./: .gitignore  CONTRIBUTING.md  README.md  example_ascii.txt  generate_examples.py  pyproject.toml  runner.py
content/: CLAUDE.md  enemies.lp  items.lp  keys_locks.lp  test_content.py
docs/plans/: 2026-01-11-clingo-dungeon-toolkit-design.md
graph/: CLAUDE.md  critical_path.lp  test_graph.py  topology.lp
placement/: CLAUDE.md  corridors.lp  non_overlap.lp  rooms.lp  rooms_coarse.lp  test_placement.py
pmd/: CLAUDE.md  README.md  corridors.py  dungeon.py  floor_clingcon_full.lp  generate_clingcon.py  placement.lp  placement.py  render_ascii.py  topology.py  visualize_graph.py
